[workspace]
members = [
  "crates/mvcc",
  "crates/sled",
  "crates/pagecache",
  "crates/pagetable",
  "tests",
]
exclude = [
  "benchmarks/stress2",
  "bindings/sled-native",
  "crates/deterministic",
  "crates/model",
  "crates/simulator",
  "crates/paxos",
  "examples/crdt_merge_store",
  "examples/pessimistic_transactions",
  "examples/playground",
]

[profile.release]
debug = 2

[profile.dev]
opt-level = 0
