[package]
name = "mvcc"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]
description = "multi-version concurrency control on top of sled"
license = "MIT/Apache-2.0"
homepage = "https://github.com/spacejam/sled"
repository = "https://github.com/spacejam/sled"
keywords = ["mvcc", "database", "embedded", "concurrent"]
documentation = "https://docs.rs/mvcc/"

[dependencies]
sled = { version = "0.16", path = "../../crates/sled" }
pagecache = { version = "0.7", path = "../../crates/pagecache" }
